Fix header/footer navigation z-index

--- a/src/stylesheets/lungo.layout.nav.styl
+++ b/src/stylesheets/lungo.layout.nav.styl
@@ -18,11 +18,11 @@ nav
     width: 100%
     & > a
       box-flex(1)
+      text-decoration: none
 
   header &
     & a
       padding: 0px 11px !important
-      z-index: 1000
       float: left
 
     & .button, button
