--- a/src/stylesheets/lungo.layout.styl
+++ b/src/stylesheets/lungo.layout.styl
@@ -65,11 +65,10 @@ header, footer
     box-flex(0)
 
   & > .title
+    z-index: -1
     margin: 0 4px
     float: left
-    z-index: -1
     font-size: (FONT_SIZE_BIG * 1.2)
-    z-index: 0
     box-flex(1)
 
     &.centered
